# OmniPano

./: .gitignore  CMakeLists.txt  README  README.md
doc/: Doxyfile  mainpage.dox  omnipano.html
shaders/: basictex.frag  basictex.vert  pano.frag  pano.vert  panocylinder.frag  panocylinder.vert  presentmesh.frag  presentmesh.vert
src/: glfw_main.cpp  sdl_main.cpp
src/AppSkeleton/: RiftAppSkeleton.cpp  RiftAppSkeleton.h
src/OVRkill/: OVRkill.cpp  OVRkill.h
src/Panorama/: PanoramaCylinder.cpp  PanoramaCylinder.h  PanoramaPatch.cpp  PanoramaPatch.h
src/Scene/: IScene.h  Scene.cpp  Scene.h  StereoPanoramaScene.cpp  StereoPanoramaScene.h
src/Util/GL/: ShaderFunctions.cpp
src/skeleton/: simple_glfw_skeleton.cpp
src/utils/: Timer.h
src/utils/GL/: ShaderFunctions.cpp
src/utils/win/: dirent.h
src/vectormath/: vector_make_helpers.h
